example/secondfile/objects/WebServiceLog__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id_WSLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Id WSLog</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WebServiceLogs</relationshipLabel>
        <relationshipName>WebServiceLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Id_WSLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Id WSLog</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>WebServiceLogs</relationshipLabel>
        <relationshipName>WebServiceLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversation_Id__c</fullName>
        <label>Conversation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <description>No.of times the webservice request triggered</description>
        <label>Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Id_WSLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Id WSLog</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>WebServiceLogs</relationshipLabel>
        <relationshipName>WebServiceLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_Id__c</fullName>
        <label>Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Message__c</fullName>
        <label>Notification Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <label>Notification Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id_WSLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for Opportunity Object in WebService.</description>
        <label>Opportunity Id WSLog</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>WebServiceLogs</relationshipLabel>
        <relationshipName>WebServiceLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote ID</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>WebServiceLogs</relationshipLabel>
        <relationshipName>WebServiceLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDS_Premise_Details_WSLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RDS-Premise Details WSLog</label>
        <referenceTo>RDS_Premise_Details__c</referenceTo>
        <relationshipLabel>WebServiceLogs</relationshipLabel>
        <relationshipName>WebServiceLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_PHI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate-PHI</label>
        <referenceTo>Rate_PHI__c</referenceTo>
        <relationshipLabel>WebServiceLogs</relationshipLabel>
        <relationshipName>WebServiceLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Data__c</fullName>
        <description>Request Data</description>
        <label>Request Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Data__c</fullName>
        <description>Response Data</description>
        <label>Response Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPAccountTicet_WSLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPAccountTicet WSLog</label>
        <referenceTo>SP_Account_Ticket__c</referenceTo>
        <relationshipLabel>WebServiceLogs</relationshipLabel>
        <relationshipName>WebServiceLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP_Account_Name__c</fullName>
        <label>SP_Account_Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Record_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Record ID</label>
        <referenceTo>CustomerSite__c</referenceTo>
        <relationshipLabel>WebServiceLogs</relationshipLabel>
        <relationshipName>WebServiceLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WebServiceLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WSLogTitle__c</fullName>
        <description>Web service error log during WS calls to ROME system</description>
        <label>WSLogTitle</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WSLog_error__c</fullName>
        <description>error body log</description>
        <label>WSLog_error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>XML_data__c</fullName>
        <label>XML Data</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <label>WebServiceLog</label>
    <listViews>
        <fullName>Account_Creation_Failed_WS</fullName>
        <columns>NAME</columns>
        <columns>Account_Id_WSLog__c</columns>
        <columns>Request_Data__c</columns>
        <columns>Response_Data__c</columns>
        <columns>WSLog_error__c</columns>
        <columns>WSLogTitle__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Id_WSLog__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Account Creation Failed WS</label>
    </listViews>
    <listViews>
        <fullName>Through_Channel_Logs</fullName>
        <columns>NAME</columns>
        <columns>Notification_Message__c</columns>
        <columns>WSLogTitle__c</columns>
        <columns>Contact_Id_WSLog__c</columns>
        <columns>Account_Id_WSLog__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Response_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>WSLogTitle__c</field>
            <operation>contains</operation>
            <value>Through</value>
        </filters>
        <label>Through Channel Logs - THIS WEEK</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VASA</fullName>
        <columns>NAME</columns>
        <columns>Quote_Proposal__c</columns>
        <columns>Message_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WSLogTitle__c</field>
            <operation>equals</operation>
            <value>Site Address Validation</value>
        </filters>
        <label>+VASA</label>
    </listViews>
    <listViews>
        <fullName>WSLog_All_Today</fullName>
        <columns>NAME</columns>
        <columns>Account_Id_WSLog__c</columns>
        <columns>Request_Data__c</columns>
        <columns>Response_Data__c</columns>
        <columns>Conversation_Id__c</columns>
        <columns>WSLog_error__c</columns>
        <columns>WSLogTitle__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>WS Logs All - Today</label>
    </listViews>
    <listViews>
        <fullName>WSLog_All_Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Account_Id_WSLog__c</columns>
        <columns>Request_Data__c</columns>
        <columns>Response_Data__c</columns>
        <columns>WSLog_error__c</columns>
        <columns>WSLogTitle__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>WS Logs All - Yesterday</label>
    </listViews>
    <listViews>
        <fullName>WSLog_Today</fullName>
        <columns>NAME</columns>
        <columns>Account_Id_WSLog__c</columns>
        <columns>Request_Data__c</columns>
        <columns>Response_Data__c</columns>
        <columns>WSLog_error__c</columns>
        <columns>WSLogTitle__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Account_Id_WSLog__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>WS Logs - Today</label>
    </listViews>
    <listViews>
        <fullName>all</fullName>
        <columns>NAME</columns>
        <columns>Account_Id_WSLog__c</columns>
        <columns>WSLog_error__c</columns>
        <columns>WSLogTitle__c</columns>
        <columns>Response_Data__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity_Id_WSLog__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WSLogTitle__c</field>
            <operation>contains</operation>
            <value>ASR</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WSLog-{000000}</displayFormat>
        <label>WebServiceLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WebServiceLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>